---------------------------------------------------------------------------------------------------
Version: 2.3.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2025-05-09
  Bugfixes:
    - fix broken GetNextLogisticStop function (Reported by @harag-on-stream on Github, PR #18. Thank you!)
    - when a train is put under LTN control, it is removed from a train group first (Suggested by @wchristian on Github, #17. Thank you!)
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2025-03-21
  Changes:
    - Make schedule parsing more robust after someone managed to trigger the `assert(record.provider ~= record.requester)` assert. Reported by @labminto on the mod forum.
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2025-03-20
  Bugfixes:
    - Fix the prototype meld statements
    - Explicitly initialize the storage depot array. Fixes #14, reported by @ITZtephen on github
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2025-03-11
  Changes:
    - refactor schedule management with new LuaSchedule API
    - add new station type 'fuel station'
    - add new virtual signal 'ltn-fuel-station' to declare a stop to be a fuel station
    - add configuration option 'ltn-schedule-fuel-station' to enable/disable fuel station support
    - add configuration option 'ltn-schedule-reset-interrupts' to enable/disable schedule reset
    - add configuration option 'ltn-schedule-reselect-depot' to enable depot changes within a network
    - [API] add attribute `is_fuel_station` to `ltn.TrainStop` to show whether this is a fuel station
    - [API] add attribute `fuel_signals` to `ltn.TrainStop` for the fuel conditions added to the refuel interrupt